Kube/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  serviceAccount: demo-sa
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
      - mountPath: /data
        name: my-volume
    ports:
    - containerPort: 80
  volumes: 
    - name: my-volume
      persistentVolumeClaim:
        claimName: my-pvc
