Kube/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: LoadBalancer
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
