Kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ingress.local
      http:
        paths:
          - path: / #URL: ingress.local/
            pathType: Prefix # or Exact
            backend:
              service:
                name: my-service
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort # it is required to use NodePort when using ingress controller
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: gettingstarted
          image: bjgomes/gettingstarted
          ports:
            - containerPort: 3000
